fix: remove gap from plans__bottom

--- a/css/style.css
+++ b/css/style.css
@@ -2867,7 +2867,7 @@ template {
     -webkit-box-align: start;
         -ms-flex-align: start;
             align-items: flex-start;
-    gap: 30px;
+    /* gap: 30px; */
     margin-top: 20px;
   }
 }
@@ -2878,6 +2878,12 @@ template {
   text-align: center;
   border-radius: 30px;
   width: 276px;
+}
+
+@media (max-width: 1550px) {
+  .plans__btn {
+    margin-top: 30px;
+  }
 }
 
 @media (max-width: 767px) {
@@ -3908,9 +3914,7 @@ template {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  -webkit-box-pack: justify;
-      -ms-flex-pack: justify;
-          justify-content: space-between;
+  /* justify-content: space-between; */
   gap: 50px;
   list-style-type: none;
 }
