--- a/sass/base/_cases.scss
+++ b/sass/base/_cases.scss
@@ -268,7 +268,7 @@
         margin-top: 30px;
         margin-left: 51px;
         display: flex;
-        justify-content: space-between;
+        /* justify-content: space-between; */
         gap: 50px;
         list-style-type: none;
         @include for-desk {
